# mantisflow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md
examples/cavity/: case.json
include/mantisflow/: mesh.hpp  solver.hpp  types.hpp
src/: main.cpp
src/mesh/: mesh.cpp
src/solver/: solver.cpp
